--- a/ExploringWithHTML5/index.html
+++ b/ExploringWithHTML5/index.html
@@ -9,15 +9,17 @@
     <body>
         <header>
             <h1 class="blue">IRC S.A</h1>
-            <ul>
+            <ul class="nav-menu">
                 <li><a href="About.html">About</a></li>
                 <li><a href="contact.html">Contact</a> </li>
                 <li>Services</li>
             </ul>
         </header>
         <div>
-            <h3>IRC S.A</h3>
-            <img src="img/img1.jpg" alt="IRC PROYECTS" width="300px" height="300px"/>
+            <h3 class="title">IRC S.A</h3>
+            <div class="circle"></div>
+            <div class="trianble"></div>
+            <img src="img/img1.jpg" alt="IRC PROYECTS" width="300px" height="300px" class="img-circle"/>
             <audio controls="controls" >
                 <source src="audio/slow.mp3" type="audio/mp3">
                 <source src="audio/slow.aac" type="audio/aac">
@@ -28,7 +30,7 @@
             </p>
 
             <p>Mattis duis rutrum ipsum quis arcu in duis vulputate et eu neque ultrices dictumst at. Erat dui aliquam. Ut consectetuer volutpat phasellus a id urna nascetur quis. Mauris orci diam vestibulum mollis fusce est non pellentesque. Nulla aliquam consequat. Ut nulla nulla neque ultrices elit. Parturient neque magna. Lorem metus vitae ipsum lorem odio. Tellus dolor fringilla. Lacus interdum justo. Et nibh faucibus libero consequat velit vel donec et pulvinar in aliquam curabitur pulvinar natoque nunc sit a vitae at neque. Amet duis at consequat con vel. Praesent tincidunt nisl. Facilisis eu lorem odio suscipit ut. Non ac erat. Pharetra ante ultricies. Donec aenean elit. Vitae sed ut nec nisl ultrices. Augue massa cras. Orci molestie scelerisque massa tincidunt sapien.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/aq73hMacQOE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/aq73hMacQOE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             <p>Duis nullam adipiscing. Metus sed quis. Non et faucibus sed placerat eget ad wisi cursus. Aliquet aliquam sit viverra integer et. Ligula aliquam euismod velit ut dignissim. Mauris massa tortor. Tempor condimentum sociosqu eu vel in placerat in a dictum nulla sit nonummy sapien mi rhoncus nec turpis eu malesuada hac. Nostra dolor varius. Dui mi tincidunt hendrerit scelerisque sit. Ligula dignissim in nulla nulla vivamus. Viverra ac a. Aliquam rutrum velit hymenaeos lobortis viverra. Lorem ac duis ligula erat diam tincidunt posuere tellus cras auctor sem. A arcu con. Convallis vitae ante. Eros eros ut. Suspendisse venenatis tellus. Morbi sit eget. Faucibus velit nunc. Id augue sem. Sapien erat ad. Lobortis volutpat tristique velit faucibus lorem sit scelerisque pellentesque vel nulla vestibulum mauris vestibulum nibh tellus placerat convallis velit ac magna eget vestibulum lectus tempus luctus egestas. Ac cras luctus neque vehicula mi. Ipsum rutrum porta. Risus vel nullam.</p>
             
             <p>A facilisi etiam volutpat eget risus aliquet dui proin. Aut fusce pulvinar. Sem etiam fames. Sem massa phasellus bibendum vestibulum vel. Nunc dignissim tristique phasellus magna mattis integer adipiscing elit.</p>
